fixed thread banners bleeding through to index

--- a/src/styles/modules/DefaultBanner.scss
+++ b/src/styles/modules/DefaultBanner.scss
@@ -11,7 +11,7 @@
 
   .brand {
     height: 7.5rem;
-    margin-top: 3rem;
+    margin-top: 6rem;
   }
 
   .brand-text {
